kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: caytu-client
  labels:
    app.kubernetes.io/part-of: caytu-client
    app.kubernetes.io/managed-by: kustomize
